<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fmoya.tuhoroscopo.Tigre"
    android:orientation="vertical"
    android:weightSum="1"
    android:maxLines="1"
    tools:ignore="Deprecated">

    <Button
        android:id="@+id/Volver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_x="16dp"
        android:layout_y="462dp"
        android:text="@string/volver_al_inicio"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/tigre"
        android:layout_width="206dp"
        android:layout_height="163dp"
        android:layout_x="89dp"
        android:layout_y="66dp"
        android:contentDescription="@string/rata"
        app:srcCompat="@drawable/tigre" />

    <TextView
        android:id="@+id/tigreyears"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="235dp"
        android:fontFamily="serif"
        android:text="@string/tigreyears"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="visible"
        tools:text="@string/tigreyears" />

    <TextView
        android:id="@+id/tigreText"
        android:layout_width="331dp"
        android:layout_height="162dp"
        android:layout_x="18dp"
        android:layout_y="303dp"
        android:width="@android:dimen/app_icon_size"
        android:text="@string/tigreText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:visibility="visible"
        tools:verticalScrollbarPosition="right"
        android:layout_gravity="right"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tigreTitle"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_x="107dp"
        android:layout_y="2dp"
        android:ems="10"
        android:text="@string/tigreTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
</AbsoluteLayout>
