<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fmoya.tuhoroscopo.Dragon"
    android:orientation="vertical"
    android:weightSum="1"
    android:maxLines="1"
    tools:ignore="Deprecated">

    <Button
        android:id="@+id/Volver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="462dp"
        android:text="@string/volver_al_inicio"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dragonyears"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="235dp"
        android:fontFamily="serif"
        android:text="@string/dragonyears"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="visible"
        tools:text="@string/dragonyears" />

    <TextView
        android:id="@+id/dragonTitle"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_x="102dp"
        android:layout_y="0dp"
        android:ems="10"
        android:text="@string/dragonTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <ImageView
        android:id="@+id/dragon"
        android:layout_width="206dp"
        android:layout_height="163dp"
        android:layout_x="81dp"
        android:layout_y="66dp"
        app:srcCompat="@drawable/dragon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dragonText"
        android:layout_width="332dp"
        android:layout_height="162dp"
        android:layout_gravity="right"
        android:layout_x="20dp"
        android:layout_y="300dp"
        android:width="@android:dimen/app_icon_size"
        android:text="@string/dragonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded"
        tools:verticalScrollbarPosition="right" />

</AbsoluteLayout>
