<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fmoya.tuhoroscopo.Jabali"
    android:orientation="vertical"
    android:weightSum="1"
    android:maxLines="1"
    tools:ignore="Deprecated">

    <TextView
        android:id="@+id/jabaliTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/jabaliTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="Jabali"
        android:layout_x="105dp" />

    <Button
        android:id="@+id/Volver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="462dp"
        android:text="@string/volver_al_inicio"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/jabali"
        android:layout_width="206dp"
        android:layout_height="163dp"
        android:layout_x="89dp"
        android:layout_y="66dp"
        app:srcCompat="@drawable/chancho"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/jabaliyears"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="235dp"
        android:fontFamily="serif"
        android:text="@string/jabaliyears"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="visible"
        tools:text="@string/jabaliyears" />

    <TextView
        android:id="@+id/jabaliText"
        android:layout_width="333dp"
        android:layout_height="162dp"
        android:layout_gravity="right"
        android:layout_x="15dp"
        android:layout_y="290dp"
        android:width="@android:dimen/app_icon_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded"
        tools:text="@string/jabaliText"
        tools:verticalScrollbarPosition="right" />
</AbsoluteLayout>
