<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fmoya.tuhoroscopo.Cabra"
    android:orientation="vertical"
    android:weightSum="1"
    android:maxLines="1"
    tools:ignore="Deprecated">

    <Button
        android:id="@+id/Volver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="462dp"
        android:text="@string/volver_al_inicio"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/cabra"
        android:layout_width="206dp"
        android:layout_height="163dp"
        android:layout_x="89dp"
        android:layout_y="66dp"
        app:srcCompat="@drawable/cabra"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/cabrayears"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="235dp"
        android:fontFamily="serif"
        android:text="@string/cabrayears"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="visible"
        tools:text="@string/cabrayears" />

    <TextView
        android:id="@+id/cabraText"
        android:layout_width="331dp"
        android:layout_height="162dp"
        android:layout_gravity="right"
        android:layout_x="18dp"
        android:layout_y="303dp"
        android:width="@android:dimen/app_icon_size"
        android:text="@string/cabraText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded"
        tools:verticalScrollbarPosition="right" />

    <TextView
        android:id="@+id/cabraTitle"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_x="119dp"
        android:layout_y="2dp"
        android:ems="10"
        android:text="@string/cabraTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
</AbsoluteLayout>
