<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fmoya.tuhoroscopo.Gallo"
    android:orientation="vertical"
    android:weightSum="1"
    android:maxLines="1"
    tools:ignore="Deprecated">

    <ImageView
        android:id="@+id/gallo"
        android:layout_width="206dp"
        android:layout_height="163dp"
        android:layout_x="89dp"
        android:layout_y="66dp"
        app:srcCompat="@drawable/gallo"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/galloyears"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="235dp"
        android:fontFamily="serif"
        android:text="@string/galloyears"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="visible"
        tools:text="@string/galloyears" />

    <TextView
        android:id="@+id/galloText"
        android:layout_width="330dp"
        android:layout_height="162dp"
        android:layout_gravity="right"
        android:layout_x="18dp"
        android:layout_y="291dp"
        android:width="@android:dimen/app_icon_size"
        android:text="@string/galloText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded"
        tools:verticalScrollbarPosition="right" />

    <TextView
        android:id="@+id/galloTitle"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_x="114dp"
        android:layout_y="2dp"
        android:ems="10"
        android:text="@string/galloTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <Button
        android:id="@+id/Volver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="464dp"
        android:text="@string/volver_al_inicio"
        android:textSize="18sp" />
</AbsoluteLayout>
